--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basketball Website</title>
+    <title></title>
     <!-- Verlinkung zum style.css -->
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style.css">
 <!-- Verlinkung zum Icon -->
-<link rel="icon" href="Medien/icon.ico" type="image/x-icon">
+<link rel="icon" href="" type="image/x-icon">
 
 </head>
 <body>
@@ -18,22 +18,16 @@
 
 
 
-        <img src="Medien/fire-basketball-silhoute-logo-illustration-vector-removebg-preview.png" alt="">
-        <h1>Basketball Webseite</h1>
+        <img src="" alt="">
+        <h1>Hello World</h1>
         
     </header>
 
     <nav>
         <ul>
-            <li><a href="./../side/Html/spielfeld.html">Spielfeld</a></li>
-            <li><a href="./../side/Html/Regeln.html">Regeln</a></li>
-            <li><a href="./../side/Html/Positionen.html">Positionen</a></li>
-            <li><a href="./../side/Html/Spieler.html">Bekannte Spieler</a></li>
-            <li><a href="./../side/Html/Erfahrungen.html">Eigene Erfahrungen</a></li>
+ <li>
+    Khalil Hamahmi
+ </li>
         </ul>
     </nav>
 
-    <video autoplay muted loop playsinline>
-        <source src="Medien/Video.mp4" type="video/mp4">
-    </video>
-    
